Removed async methods due ot the complexity of manually managing concurrency Reworked the DTOs and Services to work with polymorphic Employees and Vehicles Added eager loading options to the repository